# suffixtree

./: .hgtags  LICENSE  suffixtree.cabal
Data/: SuffixTree.hs
examples/: Makefile  Tiny.hs  UniqueMatch.hs
tests/: Makefile  SuffixCheck.hs
