Name:                suffixtree
Version:             0.1
Synopsis:            Efficient, lazy suffix tree implementation
Description:         An efficient, lazy suffix tree implementation.
Category:            Data
License:             BSD3
License-File:        LICENSE
Author:              Bryan O'Sullivan <bos@serpentine.com>
Maintainer:          bos@serpentine.com
Homepage:            http://www.serpentine.com/software/suffixtree/
Build-Depends:       base, QuickCheck
-- add fps for ghc 6.4.2
Exposed-modules:     Data.SuffixTree
ghc-options:         -W -O2 -optc-O3 -funbox-strict-fields -fno-warn-incomplete-patterns

