Name:                suffixtree
Version:             0.2.2.1
Synopsis:            Efficient, lazy suffix tree implementation
Description:         An efficient, lazy suffix tree implementation.
Category:            Data Structures, Data
License:             BSD3
License-File:        LICENSE
Author:              Bryan O'Sullivan <bos@serpentine.com>
Maintainer:          bos@serpentine.com
Homepage:            https://github.com/bos/suffixtree
Bug-Reports:         https://github.com/bos/suffixtree/issues
Build-Type:          Simple
Cabal-Version:       >= 1.6
Extra-Source-Files:  examples/Makefile
                     examples/Tiny.hs
                     examples/UniqueMatch.hs

Library
  Build-Depends:     base >= 3 && < 5,
                     bytestring,
                     containers
  Exposed-Modules:   Data.SuffixTree
  GHC-Options:       -Wall -funbox-strict-fields -fno-warn-incomplete-patterns

test-suite tests
  type:           exitcode-stdio-1.0
  hs-source-dirs: tests .
  main-is:        SuffixCheck.hs
  other-modules:  Data.SuffixTree

  ghc-options:    -Wall

  build-depends:
    QuickCheck >=1.2 && < 2.0,
    base,
    test-framework >= 0.4,
    test-framework-quickcheck


source-repository head
  type:     git
  location: https://github.com/bos/suffixtree

source-repository head
  type:     mercurial
  location: https://bitbucket.org/bos/suffixtree
